fix title input on firefox

--- a/app/components/elements/ReplyEditor.scss
+++ b/app/components/elements/ReplyEditor.scss
@@ -14,7 +14,8 @@
 .ReplyEditor__title {
   font-size: 1rem;
   font-weight: bold;
-  padding: 1rem 0.5rem;
+  padding: 0.5rem;
+  height: auto;
 }
 
 .ReplyEditor__draft {
